# EEGUniRep

./: .gitmodules  README.md
eegunirep/: pyproject.toml
eegunirep/.venv_wigner/: pyvenv.cfg
eegunirep/eegunirep/augmentations/: __init__.py  _base_augmentation.py  _simple_augmentation.py
eegunirep/eegunirep/configs/: base.toml  test.toml
eegunirep/eegunirep/datasets/: __init__.py  _vicreg_dataset.py
eegunirep/eegunirep/loaders/: __init__.py  _base_loader.py  _raw_loader.py  _vicreg_loader.py
eegunirep/eegunirep/models/: __init__.py  _attention_base_model.py  _base_model.py  _base_vicreg.py  _feature_classification.py  _torch_attention_layer.py
eegunirep/eegunirep/optimizers/: __init__.py  _lars.py
eegunirep/eegunirep/scripts/: run_feats.py  run_vicreg.py
eegunirep/eegunirep/training/: __init__.py  _feats_train.py  _vicreg_train.py
eegunirep/eegunirep/transforms/: __init__.py  _base_transforms.py  _online_static_transforms.py  _online_transforms.py
eegunirep/eegunirep/transforms/utils/: chans.csv  filters.json
eegunirep/eegunirep/utils/: electrode_utils.py  utils.py
