[tool.poetry]
name = "eegunirep"
version = "0.0.0"
description = ""
authors = ["Martyna Poziomska", "Jarosław Żywierewicz", "Jacek Rogala"]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.scripts]
run_vic = 'eegunirep.scripts.run_vicreg:main'

[tool.poetry.dependencies]
python = "~3.11"
torch = "2.0.0"
torchmetrics = "^1.5.1"
mne = "1.8.0"
torchaudio = "2.0.1"
marimo = "^0.9.14"
notebook = "^7.2.2"
scipy = "1.10.1"
torchvision = "0.15.1"
toml = "^0.10.2"
neptune = "^1.13.0"
rotary-embedding-torch = "^0.8.6"
braindecode = {path = "/dmj/fizmed/mpoziomska/ELMIKO/DOKTORAT/EEGUniRep/braindecode", develop = true}
torcheeg = {path = "/dmj/fizmed/mpoziomska/ELMIKO/DOKTORAT/EEGUniRep/torcheeg", develop = true}
pyinstrument = "^5.0.0"
numba = "^0.60.0"
catboost = "^1.2.7"

[build-system]
# mne_features requires numpy to be installed during setup phase, and fails if it's not installed
requires = ["poetry-core~=1.2.0", "poetry-dynamic-versioning~=0.19"]
build-backend = "poetry_dynamic_versioning.backend"
